# ProjectVelocity

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  package-lock.json
.github/scripts/: generate_pkgbuild.sh
.github/workflows/: ci.yml  package.yml
bench/: run_bench.sh
benchmarks/: fast-path-plan.md
benchmarks/handshake-bench/: Cargo.toml
benchmarks/handshake-bench/benches/: handshake.rs
benchmarks/results/: 2025-09-27-handshake.csv
config/: serve-schema.json
crates/pqq-client/: Cargo.toml
crates/pqq-client/examples/: velocity-fetch.rs  velocity-probe.rs
crates/pqq-client/src/: kem.rs  lib.rs
crates/pqq-core/: Cargo.toml
crates/pqq-core/src/: cbor.rs  entropy.rs  frame.rs  lib.rs  link.rs  packet.rs  resumption.rs  retry.rs  transport.rs
crates/pqq-core/tests/: handshake_fallback.rs
crates/pqq-easy/: Cargo.toml
crates/pqq-easy/src/: client.rs  error.rs  lib.rs  server.rs  util.rs
crates/pqq-server/: Cargo.toml
crates/pqq-server/src/: lib.rs
crates/pqq-server/tests/: handshake_transcript.rs  mock_transcript.rs  server_roundtrip.rs
crates/pqq-tls/: Cargo.toml
crates/pqq-tls/examples/: dump_fixtures.rs
crates/pqq-tls/src/: crypto.rs  handshake.rs  lib.rs  profiles.rs  session.rs
crates/velocity-acme/: Cargo.toml
crates/velocity-acme/src/: config.rs  lib.rs  manager.rs  storage.rs
crates/velocity-cli/: Cargo.toml
crates/velocity-cli/src/: edge.rs  main.rs  simple_config.rs  telemetry.rs
crates/velocity-cli/tests/: telemetry_smoke.rs
crates/velocity-core/: Cargo.toml
crates/velocity-core/src/: https.rs  lib.rs
crates/velocity-core/tests/: https_basic.rs
crates/velocity-edge/: Cargo.toml
crates/velocity-edge/src/: app.rs  config.rs  error.rs  lib.rs  middleware.rs  proxy.rs  rate_limit.rs  request.rs  response.rs  router.rs  serve.rs  static_site.rs  utils.rs  waf.rs
deployment/docker/: Dockerfile  serve.simple.yaml
deployment/systemd/: velocity.service
docs/: benchmarking.md  deployment.md  developer-guide.md  docker-local.md  https-migration.md  https-roadmap.md  index.md  integration-guide.md  performance-security-roadmap.md  quickstart.md  security-audit-2025-11.md  security-design.md  ssh-migration.md  systemd-service.md  upgrade-guide.md  user-handbook.md  velocity-exploit-hardening.md  velocity-ssh-migration.md
docs/systemd/: velocity.service
examples/browser-gateway/: Cargo.toml
examples/browser-gateway/src/: main.rs
examples/browser-gateway/static/: index.html
examples/handshake-demo/: Cargo.toml
examples/handshake-demo/src/: main.rs
examples/handshake-transcript-dump/: Cargo.toml
examples/handshake-transcript-dump/src/: main.rs
examples/json-api/: Cargo.toml
examples/json-api/src/: main.rs
examples/native-ffi/: README.md  easy_demo.c
examples/static-file-server/: Cargo.toml  Dockerfile
examples/static-file-server/src/: main.rs
examples/static-file-server/static/: index.html
native-bindings/: Cargo.toml
native-bindings/include/: pqq.h
native-bindings/shims/node/: README.md  index.js  package-lock.json  package.json
native-bindings/shims/python/: README.md  pqq_easy.py
native-bindings/src/: lib.rs
native-bindings/tests/: easy_roundtrip.rs
public/.velocity/certs/: self-signed-cert.pem  self-signed-key.pem
spec/: easy-config-plan.md  handshake-bytes.md  protocol-draft.md
spec/formal/: pq_quic_handshake.spthy
tools/udp-mitm/: Cargo.toml  README.md
tools/udp-mitm/src/: main.rs
