[package]
name = "pqq-native"
version = "0.2.0"
edition = "2021"
description = "C bindings for the PQ-QUIC reference implementation"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pqq-server = { path = "../crates/pqq-server" }
pqq-client = { path = "../crates/pqq-client" }
pqq-core = { path = "../crates/pqq-core" }
pqq-easy = { path = "../crates/pqq-easy" }
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "sync", "net", "time"] }
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
url = "2.5"
