[package]
name = "handshake-bench"
version = "0.2.0"
edition = "2021"
authors = ["VELO Project Developers"]
description = "Criterion benchmarks for PQ-QUIC handshake negotiation stubs"
license = "MIT"

[dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
pqq-core = { path = "../../crates/pqq-core" }
pqq-client = { path = "../../crates/pqq-client" }
pqq-server = { path = "../../crates/pqq-server" }
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "net", "sync", "time"] }
tokio-rustls = "0.23"
rcgen = "0.12"
anyhow = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "handshake"
harness = false
