[package]
name = "handshake-bench"
version = "0.2.0"
edition = "2021"
authors = ["VELO Project Developers"]
description = "Criterion benchmarks for PQ-QUIC handshake negotiation stubs"
license = "MIT"

[dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
velocity-core = { path = "../../crates/velocity-core" }
tokio = { version = "1.40", default-features = false, features = ["macros", "rt", "net", "time"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "handshake"
harness = false
