[package]
name = "pqq-core"
version = "0.2.0"
edition = "2021"
description = "Core transport primitives for the PQ-QUIC reference implementation"
license = "MIT"

[dependencies]
bytes = "1.6"
thiserror = "1.0"
tokio = { version = "1.38", features = ["net", "rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
ciborium = "0.2"
async-trait = "0.1"
rand = "0.8"
rand_chacha = "0.3"
sha3 = "0.10"
once_cell = "1.19"
hmac = "0.12"
subtle = "2.5"

[dev-dependencies]
assert_matches = "1.5"
