[package]
name = "pqq-tls"
version = "0.2.0"
edition = "2021"
description = "Hybrid TLS-like handshake layer for PQ-QUIC"
license = "MIT"

[features]
default = ["mlkem"]
mlkem = ["pqcrypto-mlkem", "pqcrypto-traits"]
mldsa = ["pqcrypto-mldsa", "pqcrypto-traits"]

[dependencies]
pqq-core = { path = "../pqq-core" }
rand = "0.8"
rand_core = "0.6"
hkdf = "0.12"
sha2 = "0.10"
thiserror = "1.0"
bytes = "1.6"
serde = { version = "1.0", features = ["derive"] }
subtle = "2.5"
hmac = "0.12"
pqcrypto-mlkem = { version = "0.1.1", optional = true }
pqcrypto-traits = { version = "0.3.5", optional = true }
pqcrypto-mldsa = { version = "0.1.2", optional = true }
chacha20poly1305 = { version = "0.10", features = ["std"] }
bincode = "1.3"
aes-gcm = { version = "0.10", features = ["aes"] }
cpufeatures = "0.2"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
