[package]
name = "velocity-acme"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
instant-acme = "0.6"
rustls-pemfile = "1.0"
rcgen = "0.12"
tokio = { version = "1.39", features = ["rt", "time", "fs", "sync", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
parking_lot = "0.12"
x509-parser = "0.15"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
rustls = { version = "0.21", features = ["dangerous_configuration"] }
tokio-rustls = "0.24"