[package]
name = "velocity-cli"
version = "0.3.5"
edition = "2024"
description = "Velocity command-line interface for fast static site serving and deployment helpers"
license = "MIT"

[[bin]]
name = "velocity"
path = "src/main.rs"

[[bin]]
name = "vel"
path = "src/main.rs"

[[bin]]
name = "velo"
path = "src/main.rs"

[[bin]]
name = "vlo"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
mime_guess = "2.0"
percent-encoding = "2.3"
thiserror = "2.0.17"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "fs", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
walkdir = "2.5"
rcgen = { version = "0.14.5", features = ["pem"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34-deprecated"
html-escape = "0.2"
httparse = "1.9"
http = "1.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
humantime = "2.1"
futures-util = "0.3"
bytes = "1.7"
notify = "8.2.0"
once_cell = "1.19"
prometheus = "0.14"  # Updated from 0.13 to fix RUSTSEC-2024-0437 (protobuf recursion crash)

pqq-core = { path = "../pqq-core" }
pqq-server = { path = "../pqq-server" }
pqq-tls = { path = "../pqq-tls" }
velocity-edge = { path = "../velocity-edge" }
velocity-core = { path = "../velocity-core" }

[dev-dependencies]
tempfile = "3.10"
