[package]
name = "velocity-core"
version = "0.2.0"
edition = "2021"
description = "Core transport primitives for the Velocity protocol"
license = "MIT"
authors = ["Velocity Project Team <dev@velocity.dev>"]

[dependencies]
bytes = "1.6"
thiserror = "1.0"
tokio = { version = "1.40", features = ["net", "macros", "sync"] }
tracing = "0.1"
hmac = "0.12"
sha3 = "0.10"
subtle = "2.5"
parking_lot = "0.12"
ahash = "0.8"
rand = "0.8"

[dev-dependencies]
hex = "0.4"
