[package]
name = "velocity-core"
version = "0.2.0"
edition = "2021"
description = "Core transport primitives for the Velocity protocol"
license = "MIT"
authors = ["Velocity Project Team <dev@velocity.dev>"]

[dependencies]
bytes = "1.6"
thiserror = "1.0"
tokio = { version = "1.40", features = ["net", "macros", "sync", "io-util", "time"] }
tracing = "0.1"
hmac = "0.12"
sha3 = "0.10"
subtle = "2.5"
parking_lot = "0.12"
ahash = "0.8"
rand = "0.8"
hyper = { version = "1.4", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["http1", "server", "tokio"] }
http-body-util = "0.1"
pqq-core = { path = "../pqq-core" }
pqq-tls = { path = "../pqq-tls" }
velocity-edge = { path = "../velocity-edge" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
hex = "0.4"
