[package]
name = "velocity-core"
version = "0.1.0"
edition = "2021"
description = "Core transport primitives for the Velocity protocol"
license = "MIT"
authors = ["Velocity Project Team <dev@velocity.dev>"]

[dependencies]
bytes = "1.6"
thiserror = "1.0"
tokio = { version = "1.40", default-features = false, features = ["macros", "net", "rt", "rt-multi-thread", "time"] }

[dev-dependencies]
pretty_assertions = "1.4"
