[package]
name = "velocity-edge"
version = "0.2.0"
edition = "2021"
description = "Dynamic runtime, CDN, and security services for the Velocity transport"
license = "MIT"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bytes = "1.7"
futures = "0.3"
futures-util = "0.3"
dashmap = "5.5"
http = "1.1"
httparse = "1.9"
humantime = "2.1"
html-escape = "0.2"
once_cell = "1.19"
parking_lot = "0.12"
pqq-server = { path = "../pqq-server" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tera = { version = "1.19", default-features = false, features = ["builtins"] }
thiserror = "1.0"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "fs", "time"] }
url = "2.4"
regex = "1.10"
mime_guess = "2.0"
notify = "6.1"

[dev-dependencies]
serde_json = "1.0"
tempfile = "3.10"