[package]
name = "handshake-demo"
version = "0.2.0"
edition = "2021"
authors = ["VELO Project Developers"]
description = "Runnable demo showcasing PQ-QUIC handshake and fallback negotiation"
license = "MIT"

[dependencies]
anyhow = "1.0"
pqq-core = { path = "../../crates/pqq-core" }
pqq-client = { path = "../../crates/pqq-client" }
pqq-server = { path = "../../crates/pqq-server" }
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "net", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
serde_json = "1.0"
